# novuskinc

./: .gitignore  Cargo.toml  Makefile  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js  systbl.rs
macros/: Cargo.toml
macros/src/: lib.rs
novuskinc/: all.html  index.html  macro.define_kernel_function!.html  macro.define_kernel_function.html  macro.gen_simpleuart!.html  macro.gen_simpleuart.html  macro.module_end!.html  macro.module_end.html  macro.module_init.html  macro.start_module!.html  macro.start_module.html  macro.v4_module_init!.html  macro.v4_module_init.html  sidebar-items.js
novuskinc/console/: index.html  sidebar-items.js  struct.KernelConsole.html  trait.KernelConsoleDriver.html
novuskinc/drivers/: index.html  sidebar-items.js  trait.Driver.html  type.DriverResult.html
novuskinc/elf/: fn.load_elf.html  fn.run_elf.html  index.html  sidebar-items.js
novuskinc/fb/: index.html  sidebar-items.js  struct.FrameBuffer.html  trait.FrameBufferGraphics.html
novuskinc/firmware/: constant.FMI_RESPONSE_ERROR.html  constant.FMI_RESPONSE_OTHER.html  constant.FMI_RESPONSE_SUCCESS.html  constant.FMI_STATUS_EMPTY.html  constant.FMI_STATUS_FULL.html  constant.FMI_STATUS_OTHER.html  index.html  sidebar-items.js  trait.FirmwareInterface.html
novuskinc/fs/: index.html
novuskinc/irq/: fn.add_irq.html  (+16 more)
src/: console.rs  debug.rs  dif.rs  exe.rs  fb.rs  firmware.rs  init.rs  led.rs  lib.rs  mb.rs  memory.rs  module.rs  platform.rs  power.rs  prelude.rs  serial.rs  storage.rs  syscalls.rs  timer.rs  wasmi.rs
tests/: Cargo.toml
(+119 files in other folders)
