[package]
name = "novuskinc"
version = "0.2.0"
edition = "2021"
description = "A lib used for anything related to Novusk"
license = "MIT"
publish = false

[workspace]
members = [
    "macros/",
    "tests/",
]

[dependencies]
novuskinc_macros = { path = "macros/" }
spin = "0.9.5"

[dev-dependencies]
tests = { path = "tests/" }

[features]
v3 = []
v4 = []
